--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
     <div class="login-container" id="login-page">
         <div class="login-box">
             <div class="login-logo">
-                <img src="https://via.placeholder.com/80" alt="AP MEMPA Logo" id="mempalogo">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjkmPsz4wW0qiErOfQgEQXW6m1_fXElF_xPQ3TPYUtD8hqVmc9vemWpNvDk0ELs4kJ6e-dYVwYQfj-DhX0qfuW1gHdcoedJMTDt6jB4i12sdjB-LTThCnv_SFZy44qiLUM5RPQKJrx6lML8qGroEygxQJfedvEjdyAYxdFu0wq-Jk_TtBCLghOioLwO6Ys/s1089/Picsart_25-08-02_20-20-55-974.png" alt="AP MEMPA Logo" id="mempalogo">
             </div>
             <h1 class="login-title">AP MEMPA Login</h1>
             
@@ -730,7 +730,7 @@
                         </button>
                     </div>
                     <div class="logo">
-                        <img src="https://via.placeholder.com/70" alt="AP MEMPA Logo" id="mempalogo">
+                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjkmPsz4wW0qiErOfQgEQXW6m1_fXElF_xPQ3TPYUtD8hqVmc9vemWpNvDk0ELs4kJ6e-dYVwYQfj-DhX0qfuW1gHdcoedJMTDt6jB4i12sdjB-LTThCnv_SFZy44qiLUM5RPQKJrx6lML8qGroEygxQJfedvEjdyAYxdFu0wq-Jk_TtBCLghOioLwO6Ys/s1089/Picsart_25-08-02_20-20-55-974.png" alt="AP MEMPA Logo" id="mempalogo">
                     </div>
                     <h1>AP MEMPA</h1>
                     <div class="user-greeting">Hi, K.G. Hymavathi</div>
